# haskell-training

./: README.md
category-theory/haskell/: Adts.hs  Coproduct.hs  Functoriality.hs  Monoids.hs
category-theory/java/: .gitignore  README.md  build.gradle  settings.gradle
category-theory/notes/: 1. Category: The Essence of Composition.md  10. Natural Transformations.md  2. Types and Functions.md  3. Categories Great and Small.md  4. Kleisli Categories.md  5. Products and Coproducts.md  6. Simple Algebraic Data Types.md  7. Functors.md  8. Functoriality.md  9. Function Types.md  Monads.md  README.md
category-theory/notes/puml/: 1-category.puml  2-types-functions.puml  3-categories-great-small.puml  4-kleisli-categories.puml  5-product-coproduct.puml  7-functors.puml  8-functoriality.puml  monads.puml
functional-patterns/: Applicatives.hs  CHANGELOG.md  Functors.hs  README.md  functional-patterns.cabal
gtk-examples/: README.md  gtk-examples.cabal
gtk-examples/src/: ListStore.hs  TreeStore.hs
jaskell/: .gitignore  settings.gradle
jaskell/gradle/wrapper/: gradle-wrapper.properties
jaskell/lib/: build.gradle
learn-you-haskell/: README.md  learn-you-haskell.cabal
learn-you-haskell/io/: .gitignore  README.md  capslocker.hs  countlines.hs  shortlinesonly.hs  todo.hs
learn-you-haskell/src/: Main.hs
learn-you-haskell/src/Basic/: Baby.hs  Persons.hs  Shapes.hs
learn-you-haskell/src/Geometry/: Cube.hs  Geometry.hs  (+1 more)
scotty-webapp-example/: CHANGELOG.md  LICENSE  README.md  scotty-webapp-example.cabal
scotty-webapp-example/server/: Article.hs  Main.hs
(+32 files in other folders)
